--- a/packages/EasterEgg/AndroidManifest.xml
+++ b/packages/EasterEgg/AndroidManifest.xml
@@ -66,7 +66,7 @@ Copyright (C) 2016 The Android Open Source Project
             android:name=".neko.NekoTile"
             android:permission="android.permission.BIND_QUICK_SETTINGS_TILE"
             android:icon="@drawable/stat_icon"
-            android:enabled="false"
+            android:enabled="true"
             android:label="@string/default_tile_name">
             <intent-filter>
                 <action android:name="android.service.quicksettings.action.QS_TILE" />
